[package]
name = "nest_analyzer"
version = "0.0.1"
edition = "2018"
description = "Analyze and Detect broken and malicious JS/TS modules."
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "MIT"
repository = "https://github.com/nestdotland/analyzer"
documentation = "http://nestdotland.github.io/analyzer/nest_analyzer/index.html"

[lib]
name = "nest_analyzer"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.11"
swc_atoms = "0.2.2"
swc_ecma_visit = "0.11.0"
swc_common = "=0.7.0"
swc_ecma_ast = "=0.26.0"
swc_ecma_parser = "=0.31.0"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.9"
