[package]
name = "analyzer_tree"
version = "0.0.1"
edition = "2018"
description = "Analyze and Detect broken and malicious JS/TS modules."
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "MIT"
repository = "https://github.com/nestdotland/analyzer"
documentation = "http://nestdotland.github.io/analyzer/nest_analyzer/index.html"

[lib]
name = "analyzer_tree"
path = "lib.rs"

[dependencies]
swc_atoms = "0.2.2"
swc_ecma_visit = "0.13.0"
swc_common = "=0.9.1"
swc_ecma_ast = "=0.28.0"
swc_ecma_parser = "=0.33.3"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.114"
