[package]
name = "nest_analyzer_wasm"
version = "0.0.1"
edition = "2018"
description = "Analyze and Detect broken and malicious JS/TS modules."
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "MIT"
repository = "https://github.com/nestdotland/analyzer"
documentation = "http://nestdotland.github.io/analyzer/nest_analyzer/index.html"

[dependencies]
nest_analyzer = { path = "../" }
wasm-bindgen = "0.2.64"
darling_core = "0.10.2"
wee_alloc = { version = "0.4.5", optional = true }

[lib]
crate-type = ["cdylib"]
name = "nest_analyzer_wasm"
path = "lib.rs"

