[package]
name = "nest_analyzer_wasm"
description = "WASM module for the nest_analyzer"
version = "0.1.0"
authors = ["Divy Srivastava"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
nest_analyzer = { path = "../" }
js-sys = "0.3.44"
console_error_panic_hook = "0.1.6"

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]